SseEmitter is not a thread safe, so i have done a new Map<Long, Object> emittersLocks = new ConcurrentHashMap<>(); because the emitters.send() can crash if heartbeat and publishMessage concurrent the same time